...
            android:hint="Type Your Password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@color/custom_button_color"
        android:text="Sign In"
        android:textColor="@color/white"
...
